--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "nsp": "^2.6.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "posttest": "npm run lint && nsp check"
   },
   "repository": {
     "type": "git",
