--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
  {
   "extends": "airbnb",
+  "rules": {
+    "react/jsx-filename-extension": ['off', { extensions: ['.jsx'] }]
+  },
   "env": {
+    "document": true,
     "jest": true
   },
   "plugins": [
